# Event-Grasping-Pipeline

./: .gitignore  README.md
src/action_client_interface/: CMakeLists.txt  package.xml
src/action_client_interface/action/: Clustering.action
src/event_clustering/: CMakeLists.txt  package.xml
src/event_clustering/scripts/: clustering_action_server1.py  clustering_action_server2.py  clustering_grasping.py  clustering_servoing.py  utils.py
src/grasping_pipeline/: CMakeLists.txt  package.xml
src/grasping_pipeline/launch/: bringup.launch  grasp.launch  ibvs.launch  launch_all.launch  pbvs.launch  pbvs_new.launch  pipeline.launch
src/grasping_pipeline/scripts/: centroid_smoother_node.py  exploration_node1.py  filtering_node.py  grasping_node1.py  grasping_node_orient.py  mission_manager1.py  position_based_servoing_node_new.py  predictive_grasp2.py  track_and_chase2.py  track_kf.py  track_kf2.py
src/grasping_pipeline/srv/: GraspObject.srv
